--- a/DatingApp-SPA/src/app/app.component.html
+++ b/DatingApp-SPA/src/app/app.component.html
@@ -1,13 +1,10 @@
 <!--The content below is only a placeholder and can be replaced.-->
-<div >
-  <h1>
+<app-nav>
+
+</app-nav>
+<h1>
   Dating App!
-  </h1>
-  <app-value>
-    
-  </app-value> 
+</h1>
+<app-value>
 
-</div>
-
-
-
+</app-value>
