--- a/DatingApp-SPA/src/app/nav/nav.component.html
+++ b/DatingApp-SPA/src/app/nav/nav.component.html
@@ -1,23 +1,25 @@
 <nav class="navbar navbar-expand-md navbar-dark bg-dark">
   <a class="navbar-brand" href="#">FRAMANI</a>
- 
-    <ul class="navbar-nav mr-auto">
-      <li class="nav-item active">
-        <a class="nav-link" href="#">Home</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="#">Link</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="#">Mensajes</a>
-      </li>
-    
-    </ul>
-    <form class="form-inline my-2 my-lg-0">
-      <input class="form-control mr-sm-2" type="text" placeholder="Search">
-      <input class="form-control mr-sm-2" type="password" placeholder="Search">
-      <button class="btn btn-success my-2 my-sm-0" type="submit">Login</button>
 
-    </form>
+  <ul class="navbar-nav mr-auto">
+    <li class="nav-item active">
+      <a class="nav-link" href="#">Home</a>
+    </li>
+    <li class="nav-item">
+      <a class="nav-link" href="#">Link</a>
+    </li>
+    <li class="nav-item">
+      <a class="nav-link" href="#">Mensajes</a>
+    </li>
+
+  </ul>
+  <form #loginForm="ngForm" class="form-inline my-2 my-lg-0" (ngSubmit)="login()">
+    <input class="form-control mr-sm-2" type="text" 
+    name="username" placeholder="Username" required [(ngModel)]="model.username">
+    <input class="form-control mr-sm-2" type="password" 
+    name="password" placeholder="password" required [(ngModel)]="model.password">
+    <button class="btn btn-success my-2 my-sm-0" type="submit">Login</button>
+
+  </form>
 
 </nav>
