--- a/DatingApp-SPA/src/app/app.component.html
+++ b/DatingApp-SPA/src/app/app.component.html
@@ -1,10 +1,4 @@
 <!--The content below is only a placeholder and can be replaced.-->
-<app-nav>
-
-</app-nav>
-<h1>
-  Dating App!
-</h1>
-<app-value>
-
-</app-value>
+<app-nav></app-nav>
+<app-home></app-home>
+<app-value></app-value>
