--- a/DatingApp-SPA/src/app/home/home.component.html
+++ b/DatingApp-SPA/src/app/home/home.component.html
@@ -11,8 +11,11 @@
   <div *ngIf="registerModel" class="container">
     <div class="row justify-content-center">
       <div class="col-md-4 col-md-offset-4">
-        <app-register></app-register>
+        <!-- <app-register [valuesFromHome]="values" (cancelRegister)="cancelRegisterMode($event)"></app-register> -->
+        <app-register  (cancelRegister)="cancelRegisterMode($event)"></app-register>
       </div>
     </div>
   </div>
 </div>
+
+<!-- <p *ngFor="let value of values">{{value.name}}</p> -->
