--- a/DatingApp-SPA/src/app/nav/nav.component.html
+++ b/DatingApp-SPA/src/app/nav/nav.component.html
@@ -1,7 +1,8 @@
 <nav class="navbar navbar-expand-md navbar-dark bg-dark">
+ <div class="container"> 
   <a class="navbar-brand" href="#">FRAMANI</a>
 
-  <ul class="navbar-nav mr-auto">
+  <ul *ngIf="loggedIn()" class="navbar-nav mr-auto">
     <li class="nav-item active">
       <a class="nav-link" href="#">Home</a>
     </li>
@@ -11,21 +12,21 @@
     <li class="nav-item">
       <a class="nav-link" href="#">Mensajes</a>
     </li>
-    <li class="nav-item">
+    <!-- <li class="nav-item">
       <a class="nav-link" (click)="logout()">Logout</a>
-    </li>
+    </li> -->
 
   </ul>
 
-  <div *ngIf="loggedIn()" class="dropdown">
-    <a class="dropdown-toggle text-light">
-      Welcome User !
+  <div *ngIf="loggedIn()" class="dropdown" dropdown>
+    <a class="dropdown-toggle text-light" dropdownToggle>
+      Welcome {{authServise.decodedToken?.unique_name | titlecase}} 
     </a>
   
-    <div class="dropdown-menu" >
+    <div class="dropdown-menu mt-3" *dropdownMenu>
       <a class="dropdown-item" href="#"><i class="fa fa-user"></i>Edit Profile</a>
      <div class="dropdown-divider"></div>
-      <a class="dropdown-item" href="#"><i class="fa fa-sign-out"></i>Logout</a>
+      <a class="dropdown-item" (click)="logout()"><i class="fa fa-sign-out"></i>Logout</a>
     </div>
   </div>
 
@@ -37,5 +38,5 @@
     <button [disabled]="!loginForm.valid" class="btn btn-success my-2 my-sm-0" type="submit">Login</button>
 
   </form>
-
+</div>
 </nav>
